@@ -3,6 +3,7 @@ package projeto.integrador3.senac.mediotec.pi3_mediotec.coordenacao;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import jakarta.transaction.Transactional;
 import projeto.integrador3.senac.mediotec.pi3_mediotec.coordenador.Coordenador;
 import projeto.integrador3.senac.mediotec.pi3_mediotec.coordenador.CoordenadorDTO;
 import projeto.integrador3.senac.mediotec.pi3_mediotec.coordenador.CoordenadorRepository;
@@ -26,6 +27,7 @@ import projeto.integrador3.senac.mediotec.pi3_mediotec.turma.TurmaResumidaDTO;
 import projeto.integrador3.senac.mediotec.pi3_mediotec.turmaDisciplinaProfessor.TurmaDisciplinaProfessor;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -39,13 +41,13 @@ public class CoordenacaoService {
 
     @Autowired
     private CoordenadorRepository coordenadorRepository;
-    
+
     @Autowired
     private TurmaRepository turmaRepository;
-    
+
     @Autowired
     private ProfessorRepository professorRepository;
-    
+
     // Lista todas as coordenacoes
     public List<CoordenacaoDTO> getAllCoordenacoes() {
         return coordenacaoRepository.findAll().stream()
@@ -59,6 +61,7 @@ public class CoordenacaoService {
                 .map(this::convertToDto);
     }
 
+    @Transactional
     public CoordenacaoDTO saveCoordenacao(CoordenacaoCadastroDTO coordenacaoDTO) {
         Coordenacao coordenacao = new Coordenacao();
         coordenacao.setNome(coordenacaoDTO.getNome());
@@ -66,7 +69,6 @@ public class CoordenacaoService {
 
         // Adiciona e associa endereços à coordenacao
         if (coordenacaoDTO.getEnderecos() != null && !coordenacaoDTO.getEnderecos().isEmpty()) {
-            // Limpa a coleção existente antes de adicionar novos itens
             coordenacao.getEnderecos().clear();
             coordenacaoDTO.getEnderecos().forEach(enderecoDTO -> {
                 Endereco endereco = Endereco.builder()
@@ -76,7 +78,7 @@ public class CoordenacaoService {
                     .bairro(enderecoDTO.getBairro())
                     .cidade(enderecoDTO.getCidade())
                     .estado(enderecoDTO.getEstado())
-                    .coordenacao(coordenacao) // Associação bidirecional
+                    .coordenacao(coordenacao)  // Associação bidirecional
                     .build();
                 coordenacao.getEnderecos().add(endereco);
             });
@@ -84,27 +86,30 @@ public class CoordenacaoService {
 
         // Adiciona e associa telefones à coordenacao
         if (coordenacaoDTO.getTelefones() != null && !coordenacaoDTO.getTelefones().isEmpty()) {
-            // Limpa a coleção existente antes de adicionar novos itens
             coordenacao.getTelefones().clear();
             coordenacaoDTO.getTelefones().forEach(telefoneDTO -> {
                 Telefone telefone = Telefone.builder()
                     .ddd(telefoneDTO.getDdd())
                     .numero(telefoneDTO.getNumero())
-                    .coordenacao(coordenacao) // Associação bidirecional
+                    .coordenacao(coordenacao)  // Associação bidirecional
                     .build();
                 coordenacao.getTelefones().add(telefone);
             });
         }
 
         // Associa coordenadores via IDs
-        if (coordenacaoDTO.getCoordenadoresIds() == null || coordenacaoDTO.getCoordenadoresIds().isEmpty()) {
-            throw new RuntimeException("Pelo menos um coordenador deve ser informado.");
-        } else {
+        if (coordenacaoDTO.getCoordenadoresIds() != null && !coordenacaoDTO.getCoordenadoresIds().isEmpty()) {
             Set<Coordenador> coordenadores = coordenacaoDTO.getCoordenadoresIds().stream()
                 .map(cpf -> coordenadorRepository.findById(cpf)
                     .orElseThrow(() -> new RuntimeException("Coordenador com CPF " + cpf + " não encontrado")))
                 .collect(Collectors.toSet());
+
+            // Faz a associação bidirecional
+            coordenadores.forEach(coordenador -> coordenador.setCoordenacao(coordenacao));
             coordenacao.setCoordenadores(coordenadores);
+
+            // Salva os coordenadores com a nova associação
+            coordenadorRepository.saveAll(coordenadores);
         }
 
         // Associa turmas via IDs
@@ -113,7 +118,13 @@ public class CoordenacaoService {
                 .map(id -> turmaRepository.findById(id)
                     .orElseThrow(() -> new RuntimeException("Turma com ID " + id + " não encontrada")))
                 .collect(Collectors.toSet());
+
+            // Faz a associação bidirecional
+            turmas.forEach(turma -> turma.setCoordenacao(coordenacao));
             coordenacao.setTurmas(turmas);
+
+            // Salva as turmas com a nova associação
+            turmaRepository.saveAll(turmas);
         }
 
         // Associa professores via IDs
@@ -122,7 +133,13 @@ public class CoordenacaoService {
                 .map(cpf -> professorRepository.findById(cpf)
                     .orElseThrow(() -> new RuntimeException("Professor com CPF " + cpf + " não encontrado")))
                 .collect(Collectors.toSet());
+
+            // Faz a associação bidirecional
+            professores.forEach(professor -> professor.setCoordenacao(coordenacao));
             coordenacao.setProfessores(professores);
+
+            // Salva os professores com a nova associação
+            professorRepository.saveAll(professores);
         }
 
         // Salva a coordenacao e retorna o DTO
@@ -130,19 +147,17 @@ public class CoordenacaoService {
         return convertToDto(savedCoordenacao);
     }
 
-
-
+    @Transactional
     public CoordenacaoDTO updateCoordenacao(Long id, CoordenacaoCadastroDTO coordenacaoDTO) {
         Coordenacao coordenacao = coordenacaoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Coordenacao não encontrada"));
+            .orElseThrow(() -> new RuntimeException("Coordenacao não encontrada"));
 
         coordenacao.setNome(coordenacaoDTO.getNome());
         coordenacao.setDescricao(coordenacaoDTO.getDescricao());
 
-        // Atualiza endereços sem recriar a coleção
-        if (coordenacaoDTO.getEnderecos() != null) {
-            Set<Endereco> enderecosAntigos = coordenacao.getEnderecos();  // Pega a coleção existente
-            enderecosAntigos.clear();  // Limpa a coleção
+        // Atualiza endereços
+        coordenacao.getEnderecos().clear();
+        if (coordenacaoDTO.getEnderecos() != null && !coordenacaoDTO.getEnderecos().isEmpty()) {
             coordenacaoDTO.getEnderecos().forEach(enderecoDTO -> {
                 Endereco endereco = Endereco.builder()
                     .cep(enderecoDTO.getCep())
@@ -151,28 +166,73 @@ public class CoordenacaoService {
                     .bairro(enderecoDTO.getBairro())
                     .cidade(enderecoDTO.getCidade())
                     .estado(enderecoDTO.getEstado())
+                    .coordenacao(coordenacao)  // Associação bidirecional
                     .build();
-                coordenacao.addEndereco(endereco);  // Adiciona novo endereço à coleção existente
+                coordenacao.getEnderecos().add(endereco);
             });
         }
 
-        // Atualiza telefones sem recriar a coleção
-        if (coordenacaoDTO.getTelefones() != null) {
-            Set<Telefone> telefonesAntigos = coordenacao.getTelefones();  // Pega a coleção existente
-            telefonesAntigos.clear();  // Limpa a coleção
+        // Atualiza telefones
+        coordenacao.getTelefones().clear();
+        if (coordenacaoDTO.getTelefones() != null && !coordenacaoDTO.getTelefones().isEmpty()) {
             coordenacaoDTO.getTelefones().forEach(telefoneDTO -> {
                 Telefone telefone = Telefone.builder()
                     .ddd(telefoneDTO.getDdd())
                     .numero(telefoneDTO.getNumero())
+                    .coordenacao(coordenacao)  // Associação bidirecional
                     .build();
-                coordenacao.addTelefone(telefone);  // Adiciona novo telefone à coleção existente
+                coordenacao.getTelefones().add(telefone);
             });
+        }
+
+        // Atualiza coordenadores
+        if (coordenacaoDTO.getCoordenadoresIds() != null && !coordenacaoDTO.getCoordenadoresIds().isEmpty()) {
+            Set<Coordenador> coordenadores = coordenacaoDTO.getCoordenadoresIds().stream()
+                .map(cpf -> coordenadorRepository.findById(cpf)
+                    .orElseThrow(() -> new RuntimeException("Coordenador com CPF " + cpf + " não encontrado")))
+                .collect(Collectors.toSet());
+
+            // Faz a associação bidirecional
+            coordenadores.forEach(coordenador -> coordenador.setCoordenacao(coordenacao));
+            coordenacao.setCoordenadores(coordenadores);
+
+            // Salva os coordenadores com a nova associação
+            coordenadorRepository.saveAll(coordenadores);
+        }
+
+        // Atualiza turmas
+        if (coordenacaoDTO.getTurmasIds() != null && !coordenacaoDTO.getTurmasIds().isEmpty()) {
+            Set<Turma> turmas = coordenacaoDTO.getTurmasIds().stream()
+                .map(turmaId -> turmaRepository.findById(turmaId)
+                    .orElseThrow(() -> new RuntimeException("Turma com ID " + turmaId + " não encontrada")))
+                .collect(Collectors.toSet());
+
+            // Faz a associação bidirecional
+            turmas.forEach(turma -> turma.setCoordenacao(coordenacao));
+            coordenacao.setTurmas(turmas);
+
+            // Salva as turmas com a nova associação
+            turmaRepository.saveAll(turmas);
+        }
+
+        // Atualiza professores
+        if (coordenacaoDTO.getProfessoresIds() != null && !coordenacaoDTO.getProfessoresIds().isEmpty()) {
+            Set<Professor> professores = coordenacaoDTO.getProfessoresIds().stream()
+                .map(cpf -> professorRepository.findById(cpf)
+                    .orElseThrow(() -> new RuntimeException("Professor com CPF " + cpf + " não encontrado")))
+                .collect(Collectors.toSet());
+
+            // Faz a associação bidirecional
+            professores.forEach(professor -> professor.setCoordenacao(coordenacao));
+            coordenacao.setProfessores(professores);
+
+            // Salva os professores com a nova associação
+            professorRepository.saveAll(professores);
         }
 
         Coordenacao updatedCoordenacao = coordenacaoRepository.save(coordenacao);
         return convertToDto(updatedCoordenacao);
     }
-
 
 
     // Deleta coordenacao
@@ -183,72 +243,64 @@ public class CoordenacaoService {
     }
 
     private CoordenacaoDTO convertToDto(Coordenacao coordenacao) {
-        // Garante que os endereços não sejam nulos, evitando NullPointerException
         Set<EnderecoDTO> enderecosDTO = (coordenacao.getEnderecos() != null) ?
-            coordenacao.getEnderecos().stream()
-                .map(endereco -> EnderecoDTO.builder()
-                    .cep(endereco.getCep())
-                    .rua(endereco.getRua())
-                    .numero(endereco.getNumero())
-                    .bairro(endereco.getBairro())
-                    .cidade(endereco.getCidade())
-                    .estado(endereco.getEstado())
-                    .build())
-                .collect(Collectors.toSet()) : Collections.emptySet();
+                coordenacao.getEnderecos().stream()
+                        .map(endereco -> EnderecoDTO.builder()
+                                .cep(endereco.getCep())
+                                .rua(endereco.getRua())
+                                .numero(endereco.getNumero())
+                                .bairro(endereco.getBairro())
+                                .cidade(endereco.getCidade())
+                                .estado(endereco.getEstado())
+                                .build())
+                        .collect(Collectors.toSet()) : new HashSet<>();
 
-        // Garante que os telefones não sejam nulos
         Set<TelefoneDTO> telefonesDTO = (coordenacao.getTelefones() != null) ?
-            coordenacao.getTelefones().stream()
-                .map(telefone -> TelefoneDTO.builder()
-                    .ddd(telefone.getDdd())
-                    .numero(telefone.getNumero())
-                    .build())
-                .collect(Collectors.toSet()) : Collections.emptySet();
+                coordenacao.getTelefones().stream()
+                        .map(telefone -> TelefoneDTO.builder()
+                                .ddd(telefone.getDdd())
+                                .numero(telefone.getNumero())
+                                .build())
+                        .collect(Collectors.toSet()) : new HashSet<>();
 
-        // Mapeia os coordenadores da coordenacao, garantindo que não sejam nulos
         List<CoordenadorResumido2DTO> coordenadoresDTO = (coordenacao.getCoordenadores() != null) ?
-            coordenacao.getCoordenadores().stream()
-                .map(coordenador -> CoordenadorResumido2DTO.builder()
-                    .cpf(coordenador.getCpf())
-                    .nomeCoordenador(coordenador.getNome() + " " + coordenador.getUltimoNome())
-                    .email(coordenador.getEmail())
-                    .telefones(coordenador.getTelefones())  // Assumindo que 'Coordenador' tem 'telefones'
-                    .build())
-                .collect(Collectors.toList()) : Collections.emptyList();
+                coordenacao.getCoordenadores().stream()
+                        .map(coordenador -> CoordenadorResumido2DTO.builder()
+                                .cpf(coordenador.getCpf())
+                                .nomeCoordenador(coordenador.getNome() + " " + coordenador.getUltimoNome())
+                                .email(coordenador.getEmail())
+                                .telefones(coordenador.getTelefones())
+                                .build())
+                        .collect(Collectors.toList()) : List.of();
 
-        // Garante que as turmas não sejam nulas
         Set<TurmaResumida2DTO> turmasDTO = (coordenacao.getTurmas() != null) ?
-            coordenacao.getTurmas().stream()
-                .map(turma -> TurmaResumida2DTO.builder()
-                    .nome(turma.getNome())
-                    .anoLetivo(turma.getAnoLetivo())
-                    .anoEscolar(turma.getAnoEscolar())
-                    .turno(turma.getTurno())
-                    .build())
-                .collect(Collectors.toSet()) : Collections.emptySet();
+                coordenacao.getTurmas().stream()
+                        .map(turma -> TurmaResumida2DTO.builder()
+                                .nome(turma.getNome())
+                                .anoLetivo(turma.getAnoLetivo())
+                                .anoEscolar(turma.getAnoEscolar())
+                                .turno(turma.getTurno())
+                                .build())
+                        .collect(Collectors.toSet()) : new HashSet<>();
 
-        // Garante que os professores não sejam nulos
         Set<ProfessorResumido2DTO> professoresDTO = (coordenacao.getProfessores() != null) ?
-            coordenacao.getProfessores().stream()
-                .map(professor -> ProfessorResumido2DTO.builder()
-                    .cpf(professor.getCpf())
-                    .nomeProfessor(professor.getNome() + " " + professor.getUltimoNome())
-                    .email(professor.getEmail())
-                    .telefones(professor.getTelefones())  // Assumindo que 'Professor' tem 'telefones'
-                    .build())
-                .collect(Collectors.toSet()) : Collections.emptySet();
+                coordenacao.getProfessores().stream()
+                        .map(professor -> ProfessorResumido2DTO.builder()
+                                .cpf(professor.getCpf())
+                                .nomeProfessor(professor.getNome() + " " + professor.getUltimoNome())
+                                .email(professor.getEmail())
+                                .telefones(professor.getTelefones())
+                                .build())
+                        .collect(Collectors.toSet()) : new HashSet<>();
 
-        // Converte a Coordenacao para CoordenacaoDTO sem redundâncias
         return CoordenacaoDTO.builder()
-            .nome(coordenacao.getNome())
-            .descricao(coordenacao.getDescricao())
-            .enderecos(enderecosDTO)
-            .telefones(telefonesDTO)
-            .coordenadores(coordenadoresDTO)  // Usa CoordenadorResumido2DTO com telefones
-            .turmas(turmasDTO)  // Adiciona turmas resumidas
-            .professores(professoresDTO)  // Adiciona professores resumidos com telefones
-            .build();
+                .nome(coordenacao.getNome())
+                .descricao(coordenacao.getDescricao())
+                .enderecos(enderecosDTO)
+                .telefones(telefonesDTO)
+                .coordenadores(coordenadoresDTO)
+                .turmas(turmasDTO)
+                .professores(professoresDTO)
+                .build();
     }
-
-
 }
